script: Match `:modal` when dialog is modal (#42201)
In addition, clean-up the UA stylesheet for dialogs.

Stylo PR: servo/stylo#301
Testing: change causes several WPT tests to start passing.

Signed-off-by: Luke Warlow <lwarlow@igalia.com>

--- a/tests/wpt/meta/html/semantics/interactive-elements/the-dialog-element/dialog-closedby.html.ini
+++ b/tests/wpt/meta/html/semantics/interactive-elements/the-dialog-element/dialog-closedby.html.ini
@@ -1,81 +1,82 @@
 [dialog-closedby.html]
+  expected: TIMEOUT
   [closedby=any, modeless]
-    expected: FAIL
+    expected: TIMEOUT
 
   [closedby=any, modal]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=any, open]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=closerequest, modeless]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=closerequest, modal]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=closerequest, open]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=none, modeless]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=none, modal]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=none, open]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=AnY, modeless]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=AnY, modal]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=AnY, open]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=ClOsErEqUeSt, modeless]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=ClOsErEqUeSt, modal]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=ClOsErEqUeSt, open]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=NoNe, modeless]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=NoNe, modal]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=NoNe, open]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=invalid, modeless]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=invalid, modal]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=invalid, open]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=, modeless]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=, modal]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=, open]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=null, modeless]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=null, modal]
-    expected: FAIL
+    expected: NOTRUN
 
   [closedby=null, open]
-    expected: FAIL
+    expected: NOTRUN
