Add uv.lock to sparse-checkout in try workflow
Signed-off-by: Sam <16504129+sagudev@users.noreply.github.com>

--- a/.github/workflows/try.yml
+++ b/.github/workflows/try.yml
@@ -42,6 +42,7 @@ jobs:
             python/servo/try_parser.py
             .github/actions/setup-python
             .python-version
+            uv.lock
           sparse-checkout-cone-mode: false
       - name: Setup Python
         uses: ./.github/actions/setup-python
