add uv.lock to all sparse checkouts
Signed-off-by: sagudev <16504129+sagudev@users.noreply.github.com>

--- a/.github/workflows/upload_release.yml
+++ b/.github/workflows/upload_release.yml
@@ -36,6 +36,7 @@ jobs:
           sparse-checkout: |
             .github
             etc/ci
+            uv.lock
           fetch-depth: '1'
       - name: Setup Python
         uses: ./.github/actions/setup-python
