--- a/.github/workflows/ohos.yml
+++ b/.github/workflows/ohos.yml
@@ -280,7 +280,8 @@ jobs:
           name: servoshell-hos-${{ inputs.profile }}.hap
       - name: Test hdc device
         # First we ensure a device is actually connected and working.
-        run: hdc list targets && hdc shell echo hello world
+        run: ! hdc list targets | grep -q Empty
+        continue-on-error: false
       - name: Sign the hap
         run: |
           ls -la
@@ -415,7 +416,8 @@ jobs:
           name: servoshell-hos-${{ inputs.profile }}.hap
       - name: Test hdc device
         # First we ensure a device is actually connected and working.
-        run: hdc list targets && hdc shell echo hello world
+        run: ! hdc list targets | grep -q Empty
+        continue-on-error: false
       - name: Sign the hap
         run: |
           ls -la
