use `&mut JSContext` in `Window::PostMessage`
Signed-off-by: pralkarz <pralkarz@tuta.com>

--- a/components/script_bindings/codegen/Bindings.conf
+++ b/components/script_bindings/codegen/Bindings.conf
@@ -792,6 +792,7 @@ DOMInterfaces = {
     'inRealms': ['Fetch', 'GetOpener', 'WebdriverCallback'],
     'additionalTraits': ['crate::interfaces::WindowHelpers'],
     'realm': ['CreateImageBitmap', 'CreateImageBitmap_'],
+    'cx': ['PostMessage', 'PostMessage_']
 },
 
 'WindowProxy' : {
