--- a/tests/wpt/tests/tools/wptrunner/requirements.txt
+++ b/tests/wpt/tests/tools/wptrunner/requirements.txt
@@ -10,4 +10,6 @@ pillow==11.3.0; python_version >= '3.9'
 requests==2.32.3
 types-requests==2.32.0.20241016
 urllib3==2.2.2
-aioquic==1.2.0
+aioquic==1.3.0; python_version >= "3.10"
+aioquic==1.2.0; python_version < "3.10"
+cryptography==46
