--- a/tests/wpt/meta/css/css-values/attr-security.html.ini
+++ b/tests/wpt/meta/css/css-values/attr-security.html.ini
@@ -77,5 +77,8 @@
   ['background-image: image-set(var(--some-other-url))' with data-foo="https://does-not-exist.test/404.png"]
     expected: FAIL
 
+  ['background-image: attr(data-foo type(*))' with data-foo="url(https://does-not-exist.test/404.png), linear-gradient(black, white)"]
+    expected: FAIL
+
   ['background-image: image-set(var(--image-set-valid))' with data-foo="image/jpeg"]
     expected: FAIL
