--- a/tests/wpt/meta/svg/styling/presentation-attributes-unknown.html.ini
+++ b/tests/wpt/meta/svg/styling/presentation-attributes-unknown.html.ini
@@ -70,3 +70,9 @@
 
   [word-spacing presentation attribute supported on an unknown SVG element]
     expected: FAIL
+
+  [alignment-baseline presentation attribute supported on an unknown SVG element]
+    expected: FAIL
+
+  [baseline-shift presentation attribute supported on an unknown SVG element]
+    expected: FAIL
