--- a/tests/wpt/meta/svg/styling/presentation-attributes-relevant.html.ini
+++ b/tests/wpt/meta/svg/styling/presentation-attributes-relevant.html.ini
@@ -79,3 +79,9 @@
 
   [word-spacing presentation attribute supported on a relevant element]
     expected: FAIL
+
+  [alignment-baseline presentation attribute supported on a relevant element]
+    expected: FAIL
+
+  [baseline-shift presentation attribute supported on a relevant element]
+    expected: FAIL
