--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ publish = false
 rust-version = "1.86.0"
 
 [workspace.dependencies]
-accesskit = { version = "0.21.1", features = ["serde"] }
+accesskit = { version = "0.24.0", features = ["serde"] }
 accountable-refcell = "0.2.2"
 aes = "0.8.4"
 aes-gcm = "0.10.3"
@@ -323,3 +323,8 @@ codegen-units = 1
 #
 # mozjs = { path = "../mozjs/mozjs" }
 # mozjs_sys = { path = "../mozjs/mozjs-sys" }
+
+# Pending egui bumping their accesskit version: https://github.com/emilk/egui/pull/7850
+# This is only used in servoshell.
+egui = { git = "https://github.com/emilk/egui.git", rev = "8ddc3d985336fcb5ae5670341ae7473afcdbb4ca" }
+egui-winit = { git = "https://github.com/emilk/egui.git", rev = "8ddc3d985336fcb5ae5670341ae7473afcdbb4ca" }
