Enable `layout.css.attr.enabled` for css-values tests
The implementation of `attr()` in Stylo is not complete, but this way
we can start testing for it.

Signed-off-by: Oriol Brufau <obrufau@igalia.com>

--- a/tests/wpt/meta/css/css-values/attr-security.html.ini
+++ b/tests/wpt/meta/css/css-values/attr-security.html.ini
@@ -38,46 +38,13 @@
   [CSS Values and Units Test: attr() security limitations 14]
     expected: FAIL
 
-  ['--x: image-set(attr(data-foo))' with data-foo="https://does-not-exist.test/404.png"]
-    expected: FAIL
-
-  ['--x: src(attr(data-foo))' with data-foo="https://does-not-exist.test/404.png"]
-    expected: FAIL
-
   ['background-image: src("https://does-not-exist.test/404.png")' with data-foo="https://does-not-exist.test/404.png"]
-    expected: FAIL
-
-  ['--x: src(string("https://does-not-exist.test" attr(data-foo)))' with data-foo="/404.png"]
     expected: FAIL
 
   ['background-image: src(string("https://does-not-exist.test/""404.png"))' with data-foo="/404.png"]
     expected: FAIL
 
-  ['--x: attr(data-foo type(<url>))' with data-foo="url(https://does-not-exist.test/404.png)"]
-    expected: FAIL
-
-  ['--x: image(attr(data-foo))' with data-foo="https://does-not-exist.test/404.png"]
-    expected: FAIL
-
   ['background-image: image("https://does-not-exist.test/404.png")' with data-foo="https://does-not-exist.test/404.png"]
-    expected: FAIL
-
-  ['background-image: url(https://does-not-exist.test/404.png), attr(data-foo type(<image>))' with data-foo="linear-gradient(#000000, #ffffff)"]
-    expected: FAIL
-
-  ['--x: image-set(var(--y, attr(data-foo)))' with data-foo="https://does-not-exist.test/404.png"]
-    expected: FAIL
-
-  ['--x: image-set(var(--some-string))' with data-foo="https://does-not-exist.test/404.png"]
-    expected: FAIL
-
-  ['--x: image-set(var(--some-string-list))' with data-foo="https://does-not-exist.test/404.png"]
-    expected: FAIL
-
-  ['--registered-color: attr(data-foo type(<color>))' with data-foo="blue"]
-    expected: FAIL
-
-  ['--x: image-set(var(--some-other-url))' with data-foo="https://does-not-exist.test/404.png"]
     expected: FAIL
 
   ['--x: image-set(if(style(--true): attr(data-foo);))' with data-foo="https://does-not-exist.test/404.png"]
@@ -98,5 +65,17 @@
   ['background-image: image-set(var(--some-string))' with data-foo="https://does-not-exist.test/404.png"]
     expected: FAIL
 
-  ['background-image: image-set(var(--some-string-list))' with data-foo="https://does-not-exist.test/404.png"]
+  ['background-image: image-set(attr(data-foo))' with data-foo="https://does-not-exist.test/404.png"]
+    expected: FAIL
+
+  ['background-image: attr(data-foo type(<url>))' with data-foo="url(https://does-not-exist.test/404.png)"]
+    expected: FAIL
+
+  ['background-image: image-set(var(--y, attr(data-foo)))' with data-foo="https://does-not-exist.test/404.png"]
+    expected: FAIL
+
+  ['background-image: image-set(var(--some-other-url))' with data-foo="https://does-not-exist.test/404.png"]
+    expected: FAIL
+
+  ['background-image: image-set(var(--image-set-valid))' with data-foo="image/jpeg"]
     expected: FAIL
