--- a/tests/wpt/meta/webaudio/the-audio-api/the-mediastreamaudiosourcenode-interface/mediastreamaudiosourcenode-routing.html.ini
+++ b/tests/wpt/meta/webaudio/the-audio-api/the-mediastreamaudiosourcenode-interface/mediastreamaudiosourcenode-routing.html.ini
@@ -1,5 +1,4 @@
 [mediastreamaudiosourcenode-routing.html]
-  expected: TIMEOUT
+  expected: CRASH
   [MediaStreamAudioSourceNode captures the right track.]
     expected: TIMEOUT
-
