--- a/tests/wpt/meta/IndexedDB/name-scopes.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/name-scopes.any.js.ini
@@ -2,21 +2,19 @@
   expected: ERROR
 
 [name-scopes.any.worker.html]
-  expected: TIMEOUT
   [Non-unique index keys]
     expected: FAIL
 
   [Unique index keys]
-    expected: TIMEOUT
+    expected: FAIL
 
 
 [name-scopes.any.html]
-  expected: TIMEOUT
   [Non-unique index keys]
     expected: FAIL
 
   [Unique index keys]
-    expected: TIMEOUT
+    expected: FAIL
 
 
 [name-scopes.any.sharedworker.html]
