Fix cookiestore defaults propagation and propagate expiry clamping to underlying object
Signed-off-by: Sebastian C <sebsebmc@gmail.com>

--- a/tests/wpt/meta/cookiestore/change_eventhandler_for_already_expired.https.window.js.ini
+++ b/tests/wpt/meta/cookiestore/change_eventhandler_for_already_expired.https.window.js.ini
@@ -1,6 +1,7 @@
 [change_eventhandler_for_already_expired.https.window.html]
+  expected: TIMEOUT
   [CookieStore setting already-expired cookie should not be observed]
-    expected: FAIL
+    expected: TIMEOUT
 
   [CookieStore setting already-expired partitioned cookie should not be observed]
-    expected: FAIL
+    expected: NOTRUN
