Use &mut JSContext in BroadcastChannel::PostMessage
Signed-off-by: BryanSmith00 <bryansmith8023@tuta.com>

--- a/components/script_bindings/codegen/Bindings.conf
+++ b/components/script_bindings/codegen/Bindings.conf
@@ -82,6 +82,10 @@ DOMInterfaces = {
     'canGc': ['GetCharacteristic', 'GetCharacteristics', 'GetIncludedService', 'GetIncludedServices'],
 },
 
+'BroadcastChannel': {
+    'cx': ['PostMessage'],
+},
+
 'ByteLengthQueuingStrategy': {
     'canGc': ['GetSize'],
 },
