feat: register `ScriptEnvironmentPreparer`
Signed-off-by: Gae24 <96017547+Gae24@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -319,3 +319,5 @@ codegen-units = 1
 #
 # mozjs = { path = "../mozjs/mozjs" }
 # mozjs_sys = { path = "../mozjs/mozjs-sys" }
+mozjs = { git = "https://github.com/servo/mozjs.git", rev = "refs/pull/704/head" }
+mozjs_sys = { git = "https://github.com/servo/mozjs.git", rev = "refs/pull/704/head" }
