Unskip most css-inline tests
Signed-off-by: Oriol Brufau <obrufau@igalia.com>

--- a/tests/wpt/include.ini
+++ b/tests/wpt/include.ini
@@ -62,9 +62,11 @@ skip: true
   [css-highlight-api]
     skip: true
   [css-inline]
-    skip: true
-    [baseline-source]
-      skip: false
+    skip: false
+    [initial-letter]
+      skip: true
+    [text-box-trim]
+      skip: true
   [css-layout-api]
     skip: true
   [css-masking]
