indexeddb: IDBIndex creation and deletion (#38840)
Implements `createIndex` and `deleteIndex`, they have already been
implemented in the backend.

Testing: WPT
Fixes: Partially #38100

---------

Signed-off-by: Ashwin Naren <arihant2math@gmail.com>

--- a/components/script_bindings/codegen/Bindings.conf
+++ b/components/script_bindings/codegen/Bindings.conf
@@ -547,6 +547,7 @@ DOMInterfaces = {
 },
 
 'IDBDatabase': {
+    'canGc': ['ObjectStoreNames'],
     'cx': ['CreateObjectStore'],
 },
 
@@ -559,6 +560,7 @@ DOMInterfaces = {
 },
 
 'IDBObjectStore': {
+    'canGc': ['CreateIndex', 'IndexNames'],
     'cx': ['Put', 'Add', 'Delete', 'Clear', 'Get', 'GetKey', 'GetAll', 'GetAllKeys', 'Count', 'OpenCursor', 'OpenKeyCursor', 'KeyPath'],
 },
 
