--- a/tests/wpt/meta/IndexedDB/cursor-overloads.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/cursor-overloads.any.js.ini
@@ -10,5 +10,6 @@
   expected: ERROR
 
 [cursor-overloads.any.worker.html]
+  expected: ERROR
   [Validate the overloads of IDBObjectStore.openCursor(), IDBIndex.openCursor() and IDBIndex.openKeyCursor()]
     expected: FAIL
