--- a/tests/wpt/meta/IndexedDB/idb-explicit-commit.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idb-explicit-commit.any.js.ini
@@ -1,7 +1,5 @@
 [idb-explicit-commit.any.worker.html]
-  [Explicitly committed data can be read back out.]
-    expected: FAIL
-
+  expected: ERROR
   [A committed transaction becomes inactive immediately.]
     expected: FAIL
 
@@ -30,13 +28,14 @@
     expected: FAIL
 
   [Transactions that handle all errors properly should behave as expected when an explicit commit is called in an onerror handler.]
+    expected: FAIL
+
+  [Explicitly committed data can be read back out.]
     expected: FAIL
 
 
 [idb-explicit-commit.any.html]
-  [Explicitly committed data can be read back out.]
-    expected: FAIL
-
+  expected: ERROR
   [A committed transaction becomes inactive immediately.]
     expected: FAIL
 
@@ -65,4 +64,7 @@
     expected: FAIL
 
   [Transactions that handle all errors properly should behave as expected when an explicit commit is called in an onerror handler.]
+    expected: FAIL
+
+  [Explicitly committed data can be read back out.]
     expected: FAIL
