--- a/tests/wpt/meta/IndexedDB/key-conversion-exceptions.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/key-conversion-exceptions.any.js.ini
@@ -20,13 +20,10 @@
   [IDBIndex openKeyCursor() method with throwing/invalid keys]
     expected: FAIL
 
-  [IDBIndex getAll() method with throwing/invalid keys]
+  [IDBCursor continue() method with throwing/invalid keys]
     expected: FAIL
 
-  [IDBIndex getAllKeys() method with throwing/invalid keys]
-    expected: FAIL
-
-  [IDBIndex getAllRecords() method with throwing/invalid keys]
+  [IDBCursor update() method with throwing/invalid keys]
     expected: FAIL
 
 
@@ -49,13 +46,10 @@
   [IDBIndex openKeyCursor() method with throwing/invalid keys]
     expected: FAIL
 
-  [IDBIndex getAll() method with throwing/invalid keys]
+  [IDBCursor continue() method with throwing/invalid keys]
     expected: FAIL
 
-  [IDBIndex getAllKeys() method with throwing/invalid keys]
-    expected: FAIL
-
-  [IDBIndex getAllRecords() method with throwing/invalid keys]
+  [IDBCursor update() method with throwing/invalid keys]
     expected: FAIL
 
 
