Validate name and values for new cookies
Signed-off-by: Sebastian C <sebsebmc@gmail.com>

--- a/tests/wpt/meta/cookiestore/cookieStore_set_arguments.https.any.js.ini
+++ b/tests/wpt/meta/cookiestore/cookieStore_set_arguments.https.any.js.ini
@@ -2,159 +2,32 @@
   expected: ERROR
 
 [cookieStore_set_arguments.https.any.html]
-  expected: CRASH
-  [cookieStore.set fails with empty name and empty value]
-    expected: TIMEOUT
-
-  [cookieStore.set with empty name and an '=' in value]
-    expected: NOTRUN
-
-  [cookieStore.set with normal name and an '=' in value]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0000]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0001]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0002]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0003]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0004]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0005]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0006]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0007]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0008]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0010]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0011]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0012]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0013]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0014]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0015]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0016]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0017]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0018]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+0019]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+001A]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+001B]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+001C]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+001D]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+001E]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+001F]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+003B]
-    expected: NOTRUN
-
-  [cookieStore.set checks if name or value contain invalid character U+007F]
-    expected: NOTRUN
-
-  [cookieStore.set with expires set to a future Date]
-    expected: NOTRUN
-
-  [cookieStore.set with expires set to a past Date]
-    expected: NOTRUN
-
-  [cookieStore.set with expires set to a future timestamp]
-    expected: NOTRUN
-
-  [cookieStore.set with expires set to a past timestamp]
-    expected: NOTRUN
-
   [cookieStore.set domain starts with "."]
-    expected: NOTRUN
+    expected: FAIL
 
   [cookieStore.set with domain that is not equal current host]
-    expected: NOTRUN
-
-  [cookieStore.set with domain set to the current hostname]
-    expected: NOTRUN
+    expected: FAIL
 
   [cookieStore.set with domain set to a subdomain of the current hostname]
-    expected: NOTRUN
+    expected: FAIL
 
   [cookieStore.set with domain set to a non-domain-matching suffix of the current hostname]
-    expected: NOTRUN
+    expected: FAIL
 
   [cookieStore.set default domain is null and differs from current hostname]
-    expected: NOTRUN
-
-  [cookieStore.set with path set to the current directory]
-    expected: NOTRUN
-
-  [cookieStore.set with path set to a subdirectory of the current directory]
-    expected: NOTRUN
-
-  [cookieStore.set default path is /]
-    expected: NOTRUN
-
-  [cookieStore.set does not add / to path that does not end with /]
-    expected: NOTRUN
-
-  [cookieStore.set can modify a cookie set by document.cookie if document is defined]
-    expected: NOTRUN
+    expected: FAIL
 
   [cookieStore.set with path that does not start with /]
-    expected: NOTRUN
+    expected: FAIL
 
   [cookieStore.set with get result]
-    expected: NOTRUN
+    expected: FAIL
 
   [cookieStore.set checks if the path is too long]
-    expected: NOTRUN
+    expected: FAIL
 
   [cookieStore.set checks if the domain is too long]
-    expected: NOTRUN
+    expected: FAIL
 
   [cookieStore.set with a __Host- prefix should not have a domain]
-    expected: NOTRUN
-
-  [cookieStore.set with whitespace only name and value]
-    expected: NOTRUN
-
-  [cookieStore.set with whitespace at begining or end]
-    expected: NOTRUN
+    expected: FAIL
