expose keypath in idbindex
Signed-off-by: Ashwin Naren <arihant2math@gmail.com>

--- a/components/script_bindings/codegen/Bindings.conf
+++ b/components/script_bindings/codegen/Bindings.conf
@@ -555,6 +555,10 @@ DOMInterfaces = {
     'cx': ['Cmp', 'Databases'],
 },
 
+'IDBIndex': {
+    'canGc': ['KeyPath'],
+},
+
 'IDBKeyRange': {
     'cx': ['Lower', 'Upper', 'Only', 'LowerBound', 'UpperBound', 'Bound', 'Includes']
 },
